--- a/index.html
+++ b/index.html
@@ -11,78 +11,7 @@
                 <div class="quickboxhead">
                     <p>teste</p>
                 </div>
-                <div>
-                    <p>hello bozo</p>
-                    <p>hello bozo</p>
-                    <p>hello bozo</p>
-                    <p>hello bozo</p>
-                </div>
-            </div>
-            <div class="quickbox">
-                <div class="quickboxhead">
-                    <p>teste</p>
-                </div>
-                <div>
-                    <p>hello bozo</p>
-                </div>
-            </div>
-            <div class="quickbox">
-                <div class="quickboxhead">
-                    <p>teste</p>
-                </div>
-                <div>
-                    <p>hello bozo</p>
-                </div>
-            </div>
-            <div class="quickbox">
-                <div class="quickboxhead">
-                    <p>teste</p>
-                </div>
-                <div>
-                    <p>hello bozo</p>
-                    <p>hello bozo</p>
-                    <p>hello bozo</p>
-                    <p>hello bozo</p>
-                </div>
-            </div>
-            <div class="quickbox">
-                <div class="quickboxhead">
-                    <p>teste</p>
-                </div>
-                <div>
-                    <p>hello bozo</p>
-                    <p>hello bozo</p>
-                    <p>hello bozo</p>
-                    <p>hello bozo</p>
-                </div>
-            </div>
-            <div class="quickbox">
-                <div class="quickboxhead">
-                    <p>teste</p>
-                </div>
-                <div>
-                    <p>hello bozo</p>
-                    <p>hello bozo</p>
-                    <p>hello bozo</p>
-                    <p>hello bozo</p>
-                </div>
-            </div>
-            <div class="quickbox">
-                <div class="quickboxhead">
-                    <p>teste</p>
-                </div>
-                <div>
-                    <p>hello bozo</p>
-                    <p>hello bozo</p>
-                    <p>hello bozo</p>
-                    <p>hello bozo</p>
-                </div>
-            </div>
-            <div class="quickbox">
-                <div class="quickboxhead">
-                    <p>teste</p>
-                </div>
-                <div>
+                <div class="quickboxbody">
                     <p>hello bozo</p>
                     <p>hello bozo</p>
                     <p>hello bozo</p>
